# tiny-music-toolbox

./: .gitignore  README.md  pyproject.toml
src/tmus/: __init__.py  cli.py  constants.py  theory.py
tests/: test_theory.py
