[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tmus"
version = "20250109"
description = "小小音乐工具箱 | Tiny Music Toolbox (tmus)"
readme = "README.md"
authors = [{ name = "zoejane" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["music", "theory", "chord", "scale", "音乐", "和弦", "音阶"]
dependencies = []
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/zoejane/tiny-music-toolbox"
Repository = "https://github.com/zoejane/tiny-music-toolbox"

[project.scripts]
tmus = "tmus.cli:main" 